--- a/Test02/Test02.csproj
+++ b/Test02/Test02.csproj
@@ -230,6 +230,12 @@
     <Compile Include="Models\sp_CongNoDenHan_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_helpdiagrams_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sp_LocDonHang_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
